--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
         <div class="left-panel">
-            <h1><span class="bakery-name">Tartas' Bakery</span></h1>
-            <img src="images/big cookie.png" alt="Cookie" class="cookie">
+            <h1><span class="bakery-name">Cookie Clicker</span></h1>
+            <img src="images/big cookie.png" alt="Cookie" class="cookie selector">
             <h1>Cookies <span>0</span></h1>
         </div>
 
@@ -19,10 +19,11 @@
                 <div class="item-info">
                     <img src="images/grandma.png" alt="Grandma">
                     <p>Grandma</p>
+                    <span class="quantity">0</span> <!-- Adicionado -->
                 </div>
                 <div class="price-box">
-                    <span class="price">100</span>
-                    <img src="images/cookie-icon.png" alt="Cookie" class="cookie-icon">
+                    <span class="price">50</span>
+                    <span>🍪</span>
                 </div>
                 <div class="item-buttons">
                     <button class="button button-buy1">Buy 1</button>
@@ -33,10 +34,11 @@
                 <div class="item-info">
                     <img src="images/cookie farm.png" alt="Farm">
                     <p>Farm</p>
+                    <span class="quantity">0</span> <!-- Adicionado -->
                 </div>
                 <div class="price-box">
-                    <span class="price">500</span>
-                    <img src="images/cookie-icon.png" alt="Cookie" class="cookie-icon">
+                    <span class="price">100</span>
+                    <span>🍪</span>
                 </div>
                 <div class="item-buttons">
                     <button class="button button-buy1">Buy 1</button>
@@ -47,10 +49,11 @@
                 <div class="item-info">
                     <img src="images/cookie mine.png" alt="Mine">
                     <p>Mine</p>
+                    <span class="quantity">0</span> <!-- Adicionado -->
                 </div>
                 <div class="price-box">
-                    <span class="price">1000</span>
-                    <img src="images/cookie-icon.png" alt="" class="cookie-icon">
+                    <span class="price">200</span>
+                    <span>🍪</span>
                 </div>
                 <div class="item-buttons">
                     <button class="button button-buy1">Buy 1</button>
