--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/index.css">
     <title>Tartas' Bakery</title>
+    <script src="script/script.ts"></script>
 </head>
 <body>
     <div class="container">
