--- a/index.html
+++ b/index.html
@@ -63,5 +63,9 @@
             </div>
         </div>
     </div>
+    <footer>
+        <a target="_blank" href="https://www.linkedin.com/in/eduardo-dos-santos-tartas-559382275/"><img src="images/linkedin-icon.png" alt=""></a>
+        <a target="_blank" href="https://github.com/EduardoTartas"><img src="images/github-icon.png" alt=""></a>
+    </footer>
 </body>
 </html>
