entidades de compra funcionando

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <span class="quantity" id="farm-quantity">0</span> 
                 </div>
                 <div class="price-box">
-                    <span class="price" id="farm-price">100</span>
+                    <span class="price" id="farm-price">150</span>
                     <span>🍪</span>
                 </div>
                 <div class="item-buttons">
@@ -53,7 +53,7 @@
                     <span class="quantity" id="mine-quantity">0</span>
                 </div>
                 <div class="price-box">
-                    <span class="price" id="farm-price">200</span>
+                    <span class="price" id="mine-price">300</span>
                     <span>🍪</span>
                 </div>
                 <div class="item-buttons">
