--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="styles/index.css">
     <title>Cookie Clicker</title>
     <script src="dist/index.js"></script>
@@ -22,13 +22,13 @@
                     <p>Grandma</p>
                     <span class="quantity" id="grandma-quantity">0</span>
                 </div>
-                <div class="price-box">
-                    <span class="price" id="grandma-price">50</span>
-                    <span>🍪</span>
-                </div>
+                
                 <div class="item-buttons">
+                    <span class="price price-box" id="grandma-price">50</span>
                     <button class="button button-buy1" id="buy-1-grandma">Buy 1</button>
+                    <span class="price-box">🍪</span>
                     <button class="button button-buy10" id="buy-5-grandma">Buy 5</button>
+                    <span class="price price-box" id="grandma-price">100</span>
                 </div>
             </div>
             <div class="item">
@@ -37,13 +37,13 @@
                     <p>Farm</p>
                     <span class="quantity" id="farm-quantity">0</span> 
                 </div>
-                <div class="price-box">
-                    <span class="price" id="farm-price">150</span>
-                    <span>🍪</span>
-                </div>
+
                 <div class="item-buttons">
+                    <span class="price price-box" id="farm-price">200</span>
                     <button class="button button-buy1" id="buy-1-farm">Buy 1</button>
+                    <span class="price-box">🍪</span>
                     <button class="button button-buy10" id="buy-5-farm">Buy 5</button>
+                        <span class="price price-box" id="farm-price">498</span>   
                 </div>
             </div>
             <div class="item">
@@ -52,20 +52,20 @@
                     <p>Mine</p>
                     <span class="quantity" id="mine-quantity">0</span>
                 </div>
-                <div class="price-box">
-                    <span class="price" id="mine-price">300</span>
-                    <span>🍪</span>
-                </div>
+                
                 <div class="item-buttons">
+                    <span class="price price-box" id="mine-price">500</span>
                     <button class="button button-buy1" id="buy-1-mine">Buy 1</button>
+                    <span class="price-box">🍪</span>
                     <button class="button button-buy10" id="buy-5-mine">Buy 5</button>
+                    <span class="price price-box" id="mine-price">500</span>
                 </div>
             </div>
         </div>
     </div>
     <footer>
         <a target="_blank" href="https://www.linkedin.com/in/eduardo-dos-santos-tartas-559382275/"><img src="images/linkedin-icon.png" alt=""></a>
-        <a target="_blank" href="https://github.com/EduardoTartas"><img src="images/github-icon.png" alt=""></a>
+        <a target="_blank" href="https://github.com/EduardoTartas/Cookie-clicker-clone"><img src="images/github-icon.png" alt=""></a>
     </footer>
 </body>
 </html>
