--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                     <span class="price price-box" id="grandma-price">50</span>
                     <button class="button button-buy1" id="buy-1-grandma">Buy 1</button>
                     <span class="price-box">🍪</span>
-                    <button class="button button-buy10" id="buy-5-grandma">Buy 5</button>
-                    <span class="price price-box" id="grandma-price">100</span>
+                    <button class="button button-buy5" id="buy-5-grandma">Buy 5</button>
+                    <span class="price price-box" id="grandma-price5">100</span>
                 </div>
             </div>
             <div class="item">
@@ -43,7 +43,7 @@
                     <button class="button button-buy1" id="buy-1-farm">Buy 1</button>
                     <span class="price-box">🍪</span>
                     <button class="button button-buy10" id="buy-5-farm">Buy 5</button>
-                        <span class="price price-box" id="farm-price">498</span>   
+                        <span class="price price-box" id="farm-price5">498</span>   
                 </div>
             </div>
             <div class="item">
@@ -58,7 +58,7 @@
                     <button class="button button-buy1" id="buy-1-mine">Buy 1</button>
                     <span class="price-box">🍪</span>
                     <button class="button button-buy10" id="buy-5-mine">Buy 5</button>
-                    <span class="price price-box" id="mine-price">500</span>
+                    <span class="price price-box" id="mine-price5">500</span>
                 </div>
             </div>
         </div>
