--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="styles/index.css">
+    <link rel="icon" href="images/cookie icon.png" type="image/x-icon">
     <title>Cookie Clicker</title>
     <script src="dist/index.js"></script>
 </head>
