retornando a classe Entity para o index

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles/index.css">
     <link rel="icon" href="images/cookie icon.png" type="image/x-icon">
     <title>Cookie Clicker</title>
-    <script src="dist/index.js"></script>
+    <script type="module" src="dist/index.js"></script>
 </head>
 <body>
     <div class="container">
